2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on clipboard ring
	  and completion window now closes when switching the desktop.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 363327 - Too
	  many undo steps needed to remove a new line.

2008-02-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Enable clipboard and
	  undo commands only when the editor window has the focus.

2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Add binding for delete
	  command, so the delete action will work even if the the delete command
	  is bound to the delete key.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed little comment issue.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixing file changed bug
	  (with new files).

2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs,
	  gtk-gui/gui.stetic: Use buttons without relief for the search/replace
	  widgets.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed toggle code comment
	  bug.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed comment/uncomment
	  code.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed Bug 362889 - Error