@@ -1,5 +1,10 @@
 2008-02-22  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SourceEditorView.cs: Changed clipboard ring
+	  handling of duplicate items.
+
+2008-02-22  Mike Krüger <mkrueger@novell.com> 
+
 	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
 	  MonoDevelop.SourceEditor.mdp,
 	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
